--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,11 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_add_smscontact">AddSMSContactActivity</string>
     <string name="title_activity_btdevice_list">BTDeviceListActivity</string>
+	<string name="cb_go">O</string>
+    <string name="cb_ct1">1</string>
+    <string name="cb_ct2">2</string>
+    <string name="cb_ct3">3</string>
+    <string name="cb_ct4">4</string>
+    <string name="cb_ct5">5</string>
 
 </resources>
